--- a/singl-palais.html
+++ b/singl-palais.html
@@ -161,13 +161,10 @@
                 L’histoire de la Cathédrale est étroitement liée à l’Histoire de France. Construite au XIIe siècle, modifiée au XVIIIe siècle puis restaurée au XIXe siècle, elle est le symbole du culte chrétien à Paris au cours des siècles.
                 Au IVe siècle, avec l’avènement de Clovis, Paris devient « capitale » chrétienne du royaume des Francs. C’est alors qu’une première cathédrale Saint-Etienne est bâtie au VIe siècle. L’essor de la ville débute au XIIe siècle après les invasions normandes. La ville prospère, elle devient un lieu d’échanges artistiques et intellectuels, dotée de collèges et d’une université de philosophie et théologie. C’est ainsi que débute l’histoire de Notre Dame.
                 Parallèlement, les croisades vers Jérusalem et les pèlerinages vers Saint-Jacques-de-Compostelle déplacent des milliers de fidèles sur les chemins. L’île de la cité est une étape incontournable pour franchir la Seine. De fait, les fidèles affluent dans le quartier de la cité. Ils génèrent de l’activité commerciale et des offrandes pour le
-
-<!--                culte. Dans ce contexte, Maurice de Sully, évêque de Paris, entreprend la construction d’une nouvelle et vaste cathédrale pour accueillir les fidèles. Au XIIIe siècle, la population de Paris double.-->
-<!--                Saint Louis ramène de Jérusalem les reliques de la passion du Christ. Elles arrivent à Paris en 1239 où le roi les porte en procession dans Notre-Dame. Ces reliques seront ensuite conservées dans la Sainte-Chapelle jusqu’à la Révolution. Elles rejoindront le trésor de Notre-Dame en 1806.-->
-<!--                La cathédrale s’agrandit et se modifie pour devenir un modèle de l’architecture religieuse. Durant la Renaissance, les goûts évoluent, son attrait est délaissé. Au XVIIe siècle, par le vœu de Louis XIII, le royaume se place sous la protection de la Vierge et promet un nouveau maître-autel pour la cathédrale – qui sera réalisé par son fils, Louis XIV. De grands aménagements ont lieu au XVIIIe siècle. Malmenée par les intempéries et la Révolution, la cathédrale menace de s’effondrer au XIXe siècle. Portée par un regain de popularité grâce à Notre-Dame de Paris de Victor Hugo, l’État décide de travaux de restauration au XIXe siècle. Classée au patrimoine mondial de l’UNESCO en 1991, la cathédrale est un haut lieu du culte chrétien et le monument le plus visité de France en 2018.-->
-<!--                A la suite de l’incendie du 15 avril 2019, qui détruit la charpente médiévale et la flèche de la cathédrale, un important chantier de restauration est mené afin de la rouvrir au culte et aux visiteurs le 8 décembre 2024.-->
-
             </p>
+            <div class="text-start mb-4">
+                <a href="javascript:void(0)" id="load-more-text-btn" class="btn btn-primary rounded-pill text-white py-3 px-5">More Details</a>
+            </div>
 <!--            <div class="text-start mb-4">-->
 <!--                <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">More</a>-->
 <!--            </div>-->
@@ -253,6 +250,33 @@
         </div>
     </div>
 </div>
+</div>
+
+<!-- Модальное окно -->
+<div class="modal fade" id="textModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content rounded-0">
+            <div class="modal-header">
+                <h5 class="modal-title">Cathédrale  Notre-Dame de Paris</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="max-height: 600px;overflow: auto;">
+                <p style="color: #000;padding: 10px;height: 500px;overflow: auto;">
+                    L’histoire de la Cathédrale est étroitement liée à l’Histoire de France. Construite au XIIe siècle, modifiée au XVIIIe siècle puis restaurée au XIXe siècle, elle est le symbole du culte chrétien à Paris au cours des siècles.
+                    Au IVe siècle, avec l’avènement de Clovis, Paris devient « capitale » chrétienne du royaume des Francs. C’est alors qu’une première cathédrale Saint-Etienne est bâtie au VIe siècle. L’essor de la ville débute au XIIe siècle après les invasions normandes. La ville prospère, elle devient un lieu d’échanges artistiques et intellectuels, dotée de collèges et d’une université de philosophie et théologie. C’est ainsi que débute l’histoire de Notre Dame.
+
+                    Parallèlement, les croisades vers Jérusalem et les pèlerinages vers Saint-Jacques-de-Compostelle déplacent des milliers de fidèles sur les chemins. L’île de la cité est une étape incontournable pour franchir la Seine. De fait, les fidèles affluent dans le quartier de la cité. Ils génèrent de l’activité commerciale et des offrandes pour le culte. Dans ce contexte, Maurice de Sully, évêque de Paris, entreprend la construction d’une nouvelle et vaste cathédrale pour accueillir les fidèles. Au XIIIe siècle, la population de Paris double.
+
+                    Saint Louis ramène de Jérusalem les reliques de la passion du Christ. Elles arrivent à Paris en 1239 où le roi les porte en procession dans Notre-Dame. Ces reliques seront ensuite conservées dans la Sainte-Chapelle jusqu’à la Révolution. Elles rejoindront le trésor de Notre-Dame en 1806.
+
+                    La cathédrale s’agrandit et se modifie pour devenir un modèle de l’architecture religieuse. Durant la Renaissance, les goûts évoluent, son attrait est délaissé. Au XVIIe siècle, par le vœu de Louis XIII, le royaume se place sous la protection de la Vierge et promet un nouveau maître-autel pour la cathédrale – qui sera réalisé par son fils, Louis XIV. De grands aménagements ont lieu au XVIIIe siècle. Malmenée par les intempéries et la Révolution, la cathédrale menace de s’effondrer au XIXe siècle. Portée par un regain de popularité grâce à Notre-Dame de Paris de Victor Hugo, l’État décide de travaux de restauration au XIXe siècle. Classée au patrimoine mondial de l’UNESCO en 1991, la cathédrale est un haut lieu du culte chrétien et le monument le plus visité de France en 2018.
+
+                    A la suite de l’incendie du 15 avril 2019, qui détruit la charpente médiévale et la flèche de la cathédrale, un important chantier de restauration est mené afin de la rouvrir au culte et aux visiteurs le 8 décembre 2024.
+
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- Modal Video -->
 <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -523,7 +547,18 @@
 <script src="lib/waypoints/waypoints.min.js"></script>
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+<script>
+    $(document).ready(function () {
+        $(document).on('click', '#load-more-text-btn', function () {
+            $('#textModal').modal('show'); // Открываем модальное окно
+        });
 
+        // Очистка (опционально) при закрытии модального окна
+        $('#textModal').on('hide.bs.modal', function () {
+            $('#textModal').hide(); // Прячем iframe, если требуется
+        });
+    });
+</script>
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
 <script>
