--- a/singl-palais.html
+++ b/singl-palais.html
@@ -181,7 +181,8 @@
             <!--                    <h1 class="display-3 mb-4">Why Choose Us! Get Your Life Style Back</h1>-->
             <p class="mb-0">
                 Le célèbre Arc de Triomphe de Paris est situé sur l'ancienne place des Stars, aujourd'hui place Charles
-                de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle. </p>
+                de Gaulle Place des Stars, aujourd'hui place Charles de Gaulle.
+            </p>
         </div>
         <div class="row g-4 justify-content-center">
             <div class=" col-md-6 col-lg-4 col-xl-4 wow fadeInUp" data-wow-delay="0.1s"
