--- a/Palais.html
+++ b/Palais.html
@@ -128,6 +128,12 @@
                 Explore the Eiffel Tower, Notre-Dame Cathedral, and the Louvre Museum.
                 Discover the Arc de Triomphe, Sacré-Cœur Basilica, and many other breathtaking landmarks.</p>
         </div>
+        <div class="form-floating mb-2" style="width: 250px;margin: auto;color: white;position: relative">
+            <input type="text" class="search-input bg-transparent border border-white" id="name" placeholder="entrez le nom de la ville">
+            <svg id="search-icon" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50">
+                <path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path>
+            </svg>
+        </div>
         <div class="row g-4 justify-content-center" id="services-container">
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded">
