--- a/singl-palais.html
+++ b/singl-palais.html
@@ -256,6 +256,7 @@
 <!-- Модальное окно -->
 <div class="modal fade" id="textModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
+
         <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">Cathédrale  Notre-Dame de Paris</h5>
@@ -282,6 +283,7 @@
 <!-- Modal Video -->
 <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
+        <p class="popup-text">échantillon</p>
         <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">YouTube Video</h5>
@@ -309,6 +311,7 @@
 <!-- Модальное окно -->
 <div class="modal fade" id="modelModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
+        <p class="popup-text">échantillon</p>
         <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title">3D Model Viewer</h5>
@@ -392,6 +395,7 @@
 
 <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
+        <p class="popup-text">échantillon</p>
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="galleryModalLabel">Галерея</h5>
