--- a/Paris.html
+++ b/Paris.html
@@ -155,7 +155,7 @@
                         <!-- Modal Video -->
                         <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
-                                <p class="popup-text">échantillon</p>
+                                <p class="popup-text" style="  color: #707070;">échantillon</p>
                                 <div class="modal-content rounded-0">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLabel">YouTube Video</h5>
